Fix JDK 8 compatibility: replace JDK 9+ APIs